[metadata]
name = stdpe
description = Steinemann DPE Libary
author = Joshoua Bigler
version = 0.0.4
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
  Programming Language :: Python :: 3.10

[options]
package_dir =
  =src
packages = find:
install_requires = 
  opencensus-ext-azure>=1.1.7
python_requires = >=3.10
zip_safe = no

[options.package_data]
azure = py.typed

[options.packages.find]
where=src
